@@ -20,6 +20,9 @@
 #include "morphology/Analysis.hpp"
 #include "morphology/Analyzer.hpp"
 #include "morphology/AnalyzerFactory.hpp"
+#include "setup/setup.hpp"
+#include "utils/utils.hpp"
+#include <string.h>
 
 using namespace std;
 
@@ -62,6 +65,42 @@ VOIKKOEXPORT const wchar_t * voikko_mor_analysis_value_ucs4(
                              const voikko_mor_analysis * analysis,
                              const char * key) {
 	return analysis->getValue(key);
+}
+
+VOIKKOEXPORT voikko_mor_analysis ** voikko_analyze_word_cstr(
+                                    int handle, const char * word) {
+	if (word == 0 || word[0] == '\0') {
+		return 0;
+	}
+	size_t len = strlen(word);
+	if (len > LIBVOIKKO_MAX_WORD_CHARS) {
+		return 0;
+	}
+	wchar_t * word_ucs4 = voikko_cstrtoucs4(word, voikko_options.encoding, len);
+	if (word_ucs4 == 0) {
+		return 0;
+	}
+	voikko_mor_analysis ** result = voikko_analyze_word_ucs4(handle, word_ucs4);
+	delete[] word_ucs4;
+	return result;
+}
+
+VOIKKOEXPORT char * voikko_mor_analysis_value_cstr(
+                const voikko_mor_analysis * analysis,
+                const char * key) {
+	const wchar_t * value_ucs4 = voikko_mor_analysis_value_ucs4(analysis, key);
+	if (value_ucs4) {
+		return voikko_ucs4tocstr(value_ucs4, voikko_options.encoding, 0);
+	}
+	else {
+		return 0;
+	}
+}
+
+VOIKKOEXPORT void voikko_free_mor_analysis_value_cstr(char * analysis_value) {
+	if (analysis_value) {
+		delete[] analysis_value;
+	}
 }
 
 } }
